@@ -118,10 +118,11 @@ nitpick [show_datatypes, expect = genuine]
 oops
 
 ML {*
-(* Proof.context -> typ -> term -> term *)
-fun my_int_postproc _ T (Const _ $ (Const _ $ t1 $ t2)) =
-    HOLogic.mk_number T (snd (HOLogic.dest_number t1) - snd (HOLogic.dest_number t2))
-  | my_int_postproc _ _ t = t
+(* Proof.context -> string -> (typ -> term list) -> typ -> term -> term *)
+fun my_int_postproc _ _ _ T (Const _ $ (Const _ $ t1 $ t2)) =
+    HOLogic.mk_number T (snd (HOLogic.dest_number t1)
+                         - snd (HOLogic.dest_number t2))
+  | my_int_postproc _ _ _ _ t = t
 *}
 
 setup {* Nitpick.register_term_postprocessor @{typ my_int} my_int_postproc *}
